[gd_scene load_steps=9 format=2]

[ext_resource path="res://GUI/Silver.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/GameMenu.gd" type="Script" id=2]
[ext_resource path="res://tiles/bright-tiles.png" type="Texture" id=3]
[ext_resource path="res://sounds/Select.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/Select_2.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "disappear"
tracks/0/type = "value"
tracks/0/path = NodePath("cover:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="GameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainPanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -300.0
margin_right = 319.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="MainPanel"]
anchor_right = 1.0
margin_top = 30.2381
margin_bottom = 80.2381
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartLabel" type="Label" parent="MainPanel/StartButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -59.5
margin_top = -27.0
margin_right = 59.5
margin_bottom = 27.0
custom_fonts/font = SubResource( 1 )
text = "INITIATE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="TextureButton" parent="MainPanel"]
anchor_right = 1.0
margin_top = 89.0374
margin_bottom = 139.037
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitLabel" type="Label" parent="MainPanel/ExitButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -59.5
margin_top = -27.0
margin_right = 59.5
margin_bottom = 27.0
custom_fonts/font = SubResource( 1 )
text = "EXIT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -471.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TWENTY TIMES"
align = 1
valign = 1

[node name="cover" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/disappear = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="mouse_entered" from="MainPanel/StartButton" to="." method="_on_StartButton_mouse_entered"]
[connection signal="mouse_exited" from="MainPanel/StartButton" to="." method="_on_StartButton_mouse_exited"]
[connection signal="pressed" from="MainPanel/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="mouse_entered" from="MainPanel/ExitButton" to="." method="_on_ExitButton_mouse_entered"]
[connection signal="mouse_exited" from="MainPanel/ExitButton" to="." method="_on_ExitButton_mouse_exited"]
[connection signal="pressed" from="MainPanel/ExitButton" to="." method="_on_ExitButton_pressed"]
